# starter

./: .gitignore  CMakeLists.txt  build.sh  linkerscript.ld
include/: GPIO.h  ISRs.h  global.h  stm32f446xx.h
src/: GPIO.c  ISRs.c  main.c  startup.s
